// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "src-shared-components-tc-communities-NewsletterSignup-style___container",
      "content": "src-shared-components-tc-communities-NewsletterSignup-style___content",
      "form": "src-shared-components-tc-communities-NewsletterSignup-style___form",
      "formButton": "src-shared-components-tc-communities-NewsletterSignup-style___formButton",
      "formEmail": "src-shared-components-tc-communities-NewsletterSignup-style___formEmail",
      "text": "src-shared-components-tc-communities-NewsletterSignup-style___text",
      "title": "src-shared-components-tc-communities-NewsletterSignup-style___title",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;

exports[`Snapshot match 2`] = `
<NewsletterSignup
  apikey=""
  buttonText="Sign Up"
  emailPlaceholder="Email address"
  imageSrc="/themes/wipro/subscribe-bg.jpg"
  text="Don’t miss out on the latest Topcoder IOS challenges and information!"
  theme={
    Object {
      "container": "container src-shared-components-tc-communities-NewsletterSignup-style___container",
      "content": "content src-shared-components-tc-communities-NewsletterSignup-style___content",
      "form": "form src-shared-components-tc-communities-NewsletterSignup-style___form",
      "formButton": "formButton src-shared-components-tc-communities-NewsletterSignup-style___formButton",
      "formEmail": "formEmail src-shared-components-tc-communities-NewsletterSignup-style___formEmail",
      "text": "text src-shared-components-tc-communities-NewsletterSignup-style___text",
      "title": "title src-shared-components-tc-communities-NewsletterSignup-style___title",
    }
  }
  title="Sign up for our newsletter"
  url=""
/>
`;
